# sickle-plus-plus

./: .gitattributes  .gitignore  BASELINE_SETUP.md  CODEBASE_SUMMARY.md  INDEX.md  PIPELINE_README.md  QUICK_START.md  SICKLE_Dataset_Complete_Documentation.md  SSSE.kml  agricultural_examples.py  config.json  examples.py  gee_sickle_download.py  main.py  pyproject.toml
cimmyt_data/: Variable_Details.xlsx  Variable_Details_v2.xlsx  convert_tif_to_numpy.py  generate_kml.py  nue_all_plots.kml  tsv_to_csv.py  variables.py
cimmyt_data/assorted_ipynb/: spectator.ipynb
cimmyt_data/pre-processing/: 32X32Clips_S2A.ipynb  dataset_prep.ipynb  long_term_prep.ipynb
cimmyt_data/processed_files/: process_baseline_nue.csv
cimmyt_data/raw_files/: variable_details_v2.csv  variables_details.csv
dataset_download/: download_script.py
models/: unet3d_multitask.py
outputs/baseline/: baseline_rf.joblib
pipeline/: __init__.py  evaluation.py  training.py
pipeline/datasets/: __init__.py  dataset.py  preprocessing.py
pipeline/download/: earth_engine.py
pipeline/features/: engineering.py
pipeline/geometry/: loader.py
pipeline/models/: inference.py
pipeline/orchestrator/: inference_pipeline.py  live_pipeline.py
scripts/: __init__.py  baseline_tabular.py  demo.py  download.py  infer.py  train.py
sickle_plus_plus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
single_download_script/: README.md  gee_download.py  gee_dry_run.py  test_field.geojson
