[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sickle-plus-plus"
version = "1.0.0"
description = "Live inference pipeline for satellite-based crop monitoring"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "SICKLE++ Team", email = "contact@sickle.ai"}
]
keywords = ["satellite", "agriculture", "remote-sensing", "crop-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "earthengine-api>=0.1.300",
    "geopandas>=0.12.0",
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "shapely>=1.8.0",
    "rasterio>=1.3.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "plotly>=5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/sickle-plus-plus"
Documentation = "https://sickle-plus-plus.readthedocs.io"
Repository = "https://github.com/your-org/sickle-plus-plus"
Issues = "https://github.com/your-org/sickle-plus-plus/issues"

[project.scripts]
sickle-inference = "dataset_download.download_script:main"

[tool.setuptools.packages.find]
include = ["pipeline*", "dataset_download*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
